добавил больше опции для слайдера, а также добавил ховер кнопкам и ссылкам

--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -41,15 +41,14 @@
                 <li class="menu__item">
                     <a class="menu__action menu__action--blue" href="/" aria-label="Скачать">
                         <span class="menu__sign">Скачать</span>
-
-                        <img class="menu__image" src="img/icon/icon__download.svg" alt="иконка загрузки">
+                        <img class="menu__picture" src="img/icon/icon__download.svg" alt="иконка загрузки">
                     </a>
                 </li>
 
                 <li class="menu__item">
                     <a class="menu__action menu__action--transparent" href="/" aria-label="Купить">
                         <span class="menu__sign">Купить</span>
-                        <img class="menu__image" src="img/icon/icon__buy.svg" alt="иконка корзины">
+                        <span class="menu__image"></span>
                     </a>
                 </li>
             </ul>
